# Quark-Engine

./: CMakeLists.txt  LICENSE  README.md
application/: entrypoint.cpp
docs/: render_docs.html
minigames/: badsoldier.cpp
modules/core/engine/: engine.cpp  engine.h  engineapi.h  enginetypes.h
modules/core/engine/modulemanager/: modulemanager.cpp  modulemanager.h
modules/core/engine/window/: window.cpp  window.h
modules/core/llcs/: llcs.h  llcsapi.h
modules/graphics/devapp/: devapp.cpp  imgui.ini
modules/graphics/rendersystem/: camera.h  csm.h  framepacket.h  frustum.h  lighting.h  material.h  meshdata.h  renderobject.h  renderstats.h  rendersystem.cpp  rendersystem.h  rendersystemapi.h  rhi.h  rstypes.h  sky.h
modules/graphics/rendersystem/backends/d3d11/: rsd3d11.cpp  rsd3d11.h  rsd3d11_device.cpp  rsd3d11_device.h  rsd3d11_math_converter.h  rsd3d11_memory.cpp  rsd3d11_memory.h  rsd3d11_pipeline.cpp  rsd3d11_pipeline.h  rsd3d11_shaders.cpp  rsd3d11_shaders.h
modules/graphics/rendersystem/backends/d3d11/shaders/: rsd3d11_main_ps.h  rsd3d11_main_vs.h  rsd3d11_shadow_vs.h  rsd3d11_sky_ps.h  rsd3d11_sky_vs.h
modules/headeronly/: globaltypes.h  mathematics.h
modules/tools/: modelloader.cpp  modelloader.h
